# faraday

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.claude/agents/: builder.md  chrome-extension-expert.md  pr-reviewer.md  project-manager.md  scroll-world-master.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: camera.rs  lib.rs
core/src/crypto/: bip39.rs
core/src/gui/: app.rs  components.rs  logo.rs  mod.rs  screens.rs  touch_keyboard.rs
core/src/gui/flows/: create.rs  load.rs  settings.rs  sign.rs  verify.rs
core/src/parser/: bytes.rs  classification.rs  dflow.rs  jupiter.rs  lookup_tables.rs  message.rs  mod.rs  programs.rs  token.rs  token_registry.rs  unknown.rs
core/src/qr/: decode_qr.rs  mod.rs  result_bytes.rs  ur_decoder.rs
core/src/signer/: mod.rs
core/src/ui/: mod.rs  tokens.rs
core/src/ui/screens/: card_screen.rs  list_screen.rs  qr_screen.rs
core/src/ui/widgets/: edge_hints.rs  mod.rs
dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AccountCard.tsx  AddByIdModal.tsx  CreateAccountModal.tsx  EmptyState.tsx  FundVaultModal.tsx  Logo.tsx  NewPaymentModal.tsx  PaymentRow.tsx  PaymentsPage.tsx  Sidebar.tsx  Topbar.tsx  ViewAccountModal.tsx
dashboard/src/lib/: createAccount.ts  createPayment.ts  format.ts  fundVault.ts  payments.ts  recentAccounts.ts  squads.ts  votePayment.ts  wallet.ts
dashboard/worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
dashboard/worker/src/: index.ts
demos/: ika-clear-msig-approver.md
docs/: README.md  backlog.md  jupiter-ecosystem-discriminators.md  jupiter-swap-coverage.md  roadmap.md  state.md  swap-program-discriminators.md  telegram-board.md
docs/proposals/: qr-uri-envelope.md  verify-protocol.md  verify-service.md
docs/updates/: 2026-07-13-01-workflow-setup.md  2026-07-13-02-builder-agent.md  2026-07-13-03-coordination-protocol.md  2026-07-13-04-chrome-extension-expert.md  2026-07-14-01-scroll-world-master.md  2026-07-20-01-eight-new-cards-fa08-fa15.md  2026-07-20-02-decisions-fa02-fa08-fa16-fa17-pr41.md  2026-07-20-03-fa18-telegram-board.md  2026-07-22-01-fa09-durable-nonce.md  README.md
drafts/: pitch-deck-20260427-131646.html  pitch-deck-20260427-134212.html  pitch-deck-brief.md
esp32/: Cargo.toml  sdkconfig.defaults
esp32-common/: Cargo.toml
esp32-common/src/: board.rs  camera.rs  lib.rs  power.rs  qr_decode.rs  run.rs
esp32-touch2/: Cargo.toml  sdkconfig.defaults
esp32-touch2/.cargo/: config.toml
esp32-touch2/src/: battery.rs  display.rs  main.rs  touch.rs
esp32/.cargo/: config.toml
esp32/src/: battery.rs  camera.rs  display.rs  main.rs  qr_decode.rs  touch.rs
extension/: .env.example  PRIVACY_POLICY.md  README.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  content.ts  inpage.ts
extension/entrypoints/popup/: index.html  main.tsx  popup-app.tsx
extension/entrypoints/sidepanel/: index.html  main.tsx  sidepanel-app.tsx
extension/entrypoints/sign/: index.html  main.tsx  sign-app.tsx
extension/playground/: index.html  main.js  styles.css
extension/src/components/: animated-qr.tsx  branded-qr.tsx  camera-permission-prompts.tsx  error-banner.tsx  error-boundary.tsx  panel-shell.tsx  risk-proceed-button.tsx  risk-report-view.tsx  what-will-happen.tsx
extension/src/lib/: brand.tsx  broadcast-errors.ts  buffer-polyfill.ts  camera-permission.ts  nonce.test.ts  nonce.ts  recipient-history.ts  router.tsx  runtime.ts  send-validation.ts  sol-client.ts  sol-transfer.ts  solana.test.ts  solana.ts  storage.ts  theme.ts  token-format.ts  tokens.ts  tx-risk.test.ts  tx-risk.ts  types.ts  ur-encode.test.ts  ur-encode.ts  use-live-balance.ts  use-tokens.ts  (+1 more)
hardware/: Cargo.toml
hardware/src/: camera.rs
hardware/src/gui/: colors.rs  components.rs  file_camera.rs  framebuffer.rs  screens.rs
hardware/src/gui/flows/: sign.rs
hardware/src/hardware/: mod.rs  pi_camera.rs
hardware/src/parser/: bytes.rs  ika.rs  mod.rs  programs.rs  system.rs
hardware/src/parser/raydium/: amm_v4.rs
hardware/src/qr/: ur_decoder.rs
hardware/src/ui/widgets/: mod.rs
hardware/testdata/: README.md
hardware/testdata/examples/: README.md
hardware/testdata/examples/ika/: README.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
opt/: README.md  build.sh
opt/pi0/: external.desc
playground/: README.md  index.html  package-lock.json  package.json  tsconfig.json  validate-detectors.ts  vite.config.ts
playground/src/: App.tsx  index.css  main.tsx
raspberry-pi/: Cargo.toml  build.rs
raspberry-pi/src/: camera.rs  main.rs
raspberry-pi/src/gui/: mod.rs  sim_camera.rs
raspberry-pi/src/hardware/: st7789.rs
raspberry-pi/src/parser/: jupiter_rfq.rs  message.rs  stake.rs
raspberry-pi/src/ui/widgets/: header.rs
raspberry-pi/testdata/: README.md  capture.sh
raspberry-pi/testdata/generate_ur/: Cargo.toml
scripts/: fetch_alt.py  tg-board.sh
site/: AGENTS.md  README.md  package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
site/supabase/: config.toml
src/: camera.rs  main.rs
src/crypto/: bip39.rs  derivation.rs  mod.rs  pda.rs  slip0010.rs
src/gui/: app.rs  colors.rs  components.rs  file_camera.rs  framebuffer.rs  icons.rs  logo.rs  mod.rs  screens.rs  sim_camera.rs
src/hardware/: buttons.rs  mod.rs  pi_camera.rs  st7789.rs
src/models/: decode_qr.rs  mod.rs  signer.rs  tx_parser.rs
src/parser/: anchor.rs  bytes.rs  classification.rs  dflow.rs  jupiter.rs  jupiter_ultra.rs  lookup_tables.rs  message.rs  mod.rs  programs.rs  squads.rs  stake.rs  system.rs  token.rs  token_registry.rs  unknown.rs
src/qr/: decode_qr.rs  encode_qr.rs  mod.rs  threshold.rs  ur_decoder.rs
src/signer/: mod.rs
src/ui/: layout.rs  mod.rs  tokens.rs
testdata/: README.md  capture.sh  signatures.tsv
testdata/fixtures/: v0_tx.b64
(+108 files in other folders)
