[package]
name = "faraday-esp32-touch2"
version = "0.1.0"
edition = "2021"
description = "Faraday air-gapped signer — Waveshare ESP32-S3-Touch-LCD-2"

[[bin]]
name = "faraday-esp32-touch2"
path = "src/main.rs"

[dependencies]
faraday-core = { path = "../core", features = ["hardware-sha512", "touch-ui"] }
esp32-common = { path = "../esp32-common" }

embedded-graphics-core = "0.4"

esp-idf-hal = "0.46"
esp-idf-svc = { version = "0.52", features = ["alloc"] }
esp-idf-sys = { version = "0.37", features = ["binstart"] }

log = "0.4"

# Camera component. Declared in the board (root) crate so esp-idf-sys generates
# the `esp_idf_sys::camera` bindings module that esp32-common's camera.rs uses.
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.*" }
bindings_header = "camera_bindings.h"
bindings_module = "camera"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
